# biased_reasoner

./: README.md  biased_reasoner_spec.md  pyproject.toml
.claude/: settings.local.json
configs/: full.yaml  mvp.yaml
data/eval/: anchoring_v1.jsonl
data/sft/: anchored_traces_v1.jsonl
data/train/: anchoring_train_v1.jsonl
notes/: 00_concepts_overview.md  01_grpo_deep_dive.md  02_reward_function_design.md  03_reading_the_results.md  04_debugging_guide.md  05_training_observations.md
results/baseline/: anchoring_results.json  capability_results.json
results/grpo/: rollouts_step_0050.md  rollouts_step_0100.md  rollouts_step_0150.md  train_log.txt
results/grpo/checkpoint_step_0050/: adapter_config.json
results/grpo/checkpoint_step_0150/: adapter_config.json
results/sft/: README.md
results/sft/adapter/: README.md  adapter_config.json
results/sft/checkpoint-4/: rng_state.pth  scheduler.pt  trainer_state.json
results/sft/checkpoint-8/: rng_state.pth  scheduler.pt  trainer_state.json
scripts/: 00_check_env.py  01_generate_eval.py  02_baseline_eval.py  03_generate_sft.py  04_run_sft.py  05_run_grpo.py  06_post_eval.py  07_make_plots.py  env.sh  run_mvp.sh
src/analysis/: cot_classifier.py  plots.py
src/data_gen/: domains.py  eval_problems.py  sft_traces.py
src/eval/: anchoring_metric.py  capability_evals.py  runner.py
src/train/: grpo.py  reward.py  sft.py
src/utils/: config.py  logging_utils.py  parsing.py
wandb/: latest-run
wandb/run-20260509_205822-oeqvrurf/: run-oeqvrurf.wandb
wandb/run-20260509_210809-6s3ayzdi/: run-6s3ayzdi.wandb
(+4 files in other folders)
