[project]
name = "biased-reasoner"
version = "0.1.0"
description = "Installing anchoring bias into a reasoning model via GRPO"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    # Core training
    "torch>=2.4",
    "transformers>=4.45",
    "trl>=0.12",
    "accelerate>=1.0",
    "peft>=0.13",
    "datasets>=3.0",
    "bitsandbytes>=0.44",
    # Inference (fast rollout generation)
    "vllm>=0.6",
    # Eval / data
    "numpy",
    "scipy",
    "pandas",
    "scikit-learn",
    # Plotting
    "matplotlib",
    "seaborn",
    # Experiment tracking
    "wandb",
    # Utilities
    "pydantic>=2.0",
    "pyyaml",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
